# OptiCraft

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
OptiCraft/: CMakeLists.txt
OptiCraft/src/: Application.cpp  Application.hpp  Window.cpp  Window.hpp  main.cpp  pch.hpp
OptiCraft/src/OptiCraft/: Application.cpp  Application.hpp  ErrorHandling.cpp  ErrorHandling.hpp  Macros.hpp  Window.cpp  Window.hpp  main.cpp
cmake/: FindSDL2.cmake
